--- a/assets/css/Landing-Page---Parallax-Background---Logo-Heading-ButtonGIF.css
+++ b/assets/css/Landing-Page---Parallax-Background---Logo-Heading-ButtonGIF.css
@@ -1,7 +1,7 @@
 #box-2 {
   height: 100vh;
   width: 100%;
-  background-image: url(../../assets/img/bg4.jpg);
+  background-image: url(../../assets/img/nb5.png);
   background-size: cover;
   display: table;
   background-attachment: fixed;
